# hubspot_next_best_action

./: .gitignore
hubspot_MCP/: bash.exe.stackdump  test.txt
hubspot_MCP/mcp-hubspot/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
hubspot_MCP/mcp-hubspot/src/mcp_server_hubspot/: __init__.py  faiss_manager.py  hubspot_client.py  server.py  utils.py
hubspot_MCP/mcp-hubspot/src/mcp_server_hubspot/clients/: company_client.py  contact_client.py  conversation_client.py  deal_client.py  ticket_client.py
hubspot_MCP/mcp-hubspot/src/mcp_server_hubspot/core/: error_handler.py  formatters.py  storage.py
hubspot_MCP/mcp-hubspot/src/mcp_server_hubspot/handlers/: base_handler.py  company_handler.py  contact_handler.py  conversation_handler.py  deals_handler.py  search_handler.py  ticket_handler.py
hubspot_MCP/mcp-hubspot/tests/: get_closed_ticket_conversations.py  test_closed_tickets.py  test_mcp_ticket_conversations.py
hubspot_nba/: prompt.txt
hubspot_nba/webhook_server/: app.py  requirements.txt  server.py
hubspot_nba/webhook_server/hubspot_request/: 1747248391.txt  1747248680.txt
simple_hubspot_MCP/: requirements.txt
simple_hubspot_MCP/src/: hubspot_clients.py  main.py
